--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,12 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>6.0.0!</h2>
+    <h3>New</h3>
+    <ul>
+      <li>Added a customDateFormat plugin and new options to allow custom formats to be provided for input parsing/setting</li>
+      <li>Replaced examples page with REPL</li>
+    </ul>
     <h2>Beta9</h2>
     <h3>Bug Fixes</h3>
     <ul>
