--- a/src/docs/partials/index.html
+++ b/src/docs/partials/index.html
@@ -7,7 +7,7 @@
       If you're looking for installation instructions check out the <a href='installing.html'>download page</a>.
     </p>
     <p>
-      Once you get it installed there are plenty of <a href='examples/'>examples</a> and a <a href='https://stackblitz.com/edit/tempus-dominus-v6-simple-setup'>stackblitz</a>.
+      Once you get it installed there are plenty of <a href='repl.html'>examples</a> and a <a href='https://stackblitz.com/edit/tempus-dominus-v6-simple-setup'>stackblitz</a>.
     </p>
     <h3>Get involved</h3>
     <ul>
