--- a/src/docs/partials/installing.html
+++ b/src/docs/partials/installing.html
@@ -1,14 +1,15 @@
 <page-body>
-  <section>
+  <div class='row'>
     <p>
       No matter how you choose to get the files, make sure that Popper is include before the picker's main script file.
     </p>
     <p>
-      You will also want a font library. The picker defaults to Font Awesome 6, but you can provide a different icon set via the configuration or a plugin.
+      You will also want a font library. The picker defaults to Font Awesome 6, but you can provide a different icon set
+      via the configuration or a plugin.
     </p>
-  </section>
-  <section>
-    <h2>Via CDN</h2>
+  </div>
+  <div class='row'>
+    <h3>Via CDN</h3>
     <pre>
     <code class='language-html'>
 &lt;!-- Popperjs --&gt;
@@ -23,29 +24,29 @@
       rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;
     </code>
 </pre>
-  </section>
-  <section>
-    <h2>Via NPM</h2>
+  </div>
+  <div class='row'>
+    <h3>Via NPM</h3>
     <pre>
-    <code class="language-batch">
+    <code class='language-batch'>
 npm install @popperjs/core @eonasdan/tempus-dominus
     </code>
 </pre>
-  </section>
-  <section>
-    <h2>Compiled Code</h2>
+  </div>
+  <div class='row'>
+    <h3>Compiled Code</h3>
     <p>
       You can grab the compiled js and css from <a href='https://github.com/Eonasdan/tempus-dominus/tree/master/dist'
                                                    target='_blank' rel='noopener'>GitHub</a>
     </p>
     <p>You still need to get Popper yourself.</p>
-  </section>
-  <section>
-    <h2>Nuget Package</h2>
+  </div>
+  <div class='row'>
+    <h3>Nuget Package</h3>
     <p>
       Nuget package are returning! Coming Soon.
     </p>
-  </section>
+  </div>
 </page-body>
 <page-meta>
   <title>Download</title>
