--- a/src/docs/partials/plugins/paint.html
+++ b/src/docs/partials/plugins/paint.html
@@ -11,7 +11,7 @@
                     <div class='col-sm-6'>
                         <label for='datetimepicker1Input' class='form-label'>Simple picker</label>
                         <div
-                                class='input-group log-event'
+                                class='input-group'
                                 id='datetimepicker1'
                                 data-td-target-input='nearest'
                                 data-td-target-toggle='nearest'
