--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -15,12 +15,23 @@
                            class='d-inline-flex align-items-center rounded' aria-current='page'>Change Log</a></li>
                     <li><a href='/6/functions.html'
                            class='d-inline-flex align-items-center rounded' aria-current='page'>Functions</a></li>
-                    <li><a href='/6/options.html'
-                           class='d-inline-flex align-items-center rounded' aria-current='page'>Options</a></li>
                     <li><a href='/6/datetime.html'
                            class='d-inline-flex align-items-center rounded' aria-current='page'>DateTime</a></li>
                     <li><a href='/6/locale.html'
                            class='d-inline-flex align-items-center rounded' aria-current='page'>Locales</a></li>
+                </ul>
+            </li>
+            <li class='mb-1'>
+                <strong>
+                    Options
+                </strong>
+
+                <ul class='list-unstyled fw-normal pb-1 small'>
+                    <li><a href='/6/options/' class='d-inline-flex align-items-center rounded'>Overview</a>
+                    </li>
+                    <li><a href='/6/options/restrictions.html' class='d-inline-flex align-items-center rounded'>Restrictions</a></li>
+                    <li><a href='/6/options/display.html' class='d-inline-flex align-items-center rounded'>Display</a></li>
+                    <li><a href='/6/options/localization.html' class='d-inline-flex align-items-center rounded'>Localization</a></li>
                 </ul>
             </li>
             <li class='mb-1'>
@@ -39,21 +50,7 @@
                     <li><a href='/6/namespace/unit.html' class='d-inline-flex align-items-center rounded'>Unit</a></li>
                 </ul>
             </li>
-            <li class='mb-1'>
-                <strong>
-                    Examples
-                </strong>
 
-                <ul class='list-unstyled fw-normal pb-1 small'>
-                    <li><a href='/6/examples/' class='d-inline-flex align-items-center rounded'>Overview</a>
-                    </li>
-                    <li><a href='/6/examples/jquery.html' class='d-inline-flex align-items-center rounded'>jQuery</a>
-                    </li>
-                    <li><a href='/6/examples/no-styles.html' class='d-inline-flex align-items-center rounded'>No
-                        Styles</a>
-                    </li>
-                </ul>
-            </li>
             <li class='mb-1'>
                 <strong>
                     Plugins
@@ -84,6 +81,17 @@
     <div class='bd-intro ps-lg-4'>
         <div class='d-md-flex align-items-center justify-content-between'>
             <h1 class='bd-title title' id='content'>Introduction</h1>
+        </div>
+    </div>
+    <div class="bd-toc mt-3 mb-5 my-lg-0 ps-xl-3 mb-lg-5 text-muted d-none" id='tocContainer'>
+        <button class="btn btn-link link-dark p-md-0 mb-2 mb-md-0 text-decoration-none bd-toc-toggle d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#tocContents" aria-expanded="false" aria-controls="tocContents">
+            On this page
+            <svg class="bi d-md-none ms-2" aria-hidden="true"><use xlink:href="#chevron-expand"></use></svg>
+        </button>
+        <strong class="d-none d-md-block h6 my-2">On this page</strong>
+        <hr class="d-none d-md-block my-2">
+        <div class="collapse bd-toc-collapse" id="tocContents">
+
         </div>
     </div>
     <div id='mainContent' class='bd-content ps-lg-4'>
